<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.github.thomas_p.popularmoviesapp.MainActivity">

    <RelativeLayout
        android:id="@+id/rl_error_message"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error_message_network_failure"
            android:textSize="@dimen/title_size"
            android:textColor="@color/colorAccent"
            android:textIsSelectable="false"/>
        <Button
            android:id="@+id/action_error_try_again"
            android:layout_marginTop="60sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_centerInParent="true"
            android:text="@string/error_message_try_again"/>
    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/rv_movie_list"
        android:layout_gravity="end"
        android:paddingEnd="@dimen/ml_padding"
        android:paddingRight="@dimen/ml_padding"
        android:paddingBottom="@dimen/ml_padding"/>

    <FrameLayout
        android:id="@+id/ml_loading_indicator"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#80000000"
        android:layout_gravity="bottom|center"
        android:padding="@dimen/ml_padding">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ml_loading_indicator_text"
                android:textColor="#fff"
                android:textSize="@dimen/title_size"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>

    </FrameLayout>
</FrameLayout>
